Update Connect button and optimize viewport layout
- Changed button text from 'Launch ICB Agent' to 'Connect' across all HTML files
- Updated JavaScript messaging for consistency with new button branding
- Implemented comprehensive viewport optimizations for single-page layout
- Enhanced responsive design with ultra-compact mobile layouts
- Added CSS optimizations for desktop (1440x1024), tablet (1024x768), and mobile (375x667/812) viewports
- Ensured Connect button is fully visible without scrolling on all device sizes
- Added new test files and backup versions for development workflow
- Validated layout optimizations using Playwright browser testing

--- a/public/index_new.html
+++ b/public/index_new.html
@@ -30,7 +30,18 @@
             <div class="header-content">
                 <div class="logo-section">
                     <div class="logo">
-                        <img src="/images/icblogo.jpg" alt="ICB Solutions Logo" class="logo-image">
+                        <svg width="48" height="48" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="50" cy="50" r="45" fill="url(#logoGradient)" stroke="rgba(255,255,255,0.3)" stroke-width="2"/>
+                            <path d="M30 35h40v30H30z" fill="none" stroke="white" stroke-width="3" stroke-linecap="round"/>
+                            <path d="M35 45h30M35 55h25" stroke="white" stroke-width="2" stroke-linecap="round"/>
+                            <circle cx="60" cy="40" r="6" fill="white" opacity="0.9"/>
+                            <defs>
+                                <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                                    <stop offset="0%" style="stop-color:#022541"/>
+                                    <stop offset="100%" style="stop-color:#2f6b8a"/>
+                                </linearGradient>
+                            </defs>
+                        </svg>
                     </div>
                     <div class="brand-text">
                         <h1>ICB Agent</h1>
@@ -38,23 +49,9 @@
                     </div>
                 </div>
                 <div class="header-actions">
-                    <button class="home-btn" id="homeBtn" style="display: none;" title="Return to Dashboard">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                            <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
-                        </svg>
-                        <span>Home</span>
-                    </button>
-                    <div class="connection-wrapper">
-                        <div class="connection-status" id="connectionStatus">
-                            <div class="status-indicator disconnected" id="statusIndicator"></div>
-                            <span id="statusText">Disconnected</span>
-                        </div>
-                        <button class="disconnect-btn" id="disconnectBtn" style="display: none;" title="Disconnect from tenant">
-                            <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                <path d="M17 7l-1.41 1.41L18.17 11H8v2h10.17l-2.58 2.59L17 17l5-5zM4 5h8V3H4c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h8v-2H4V5z"/>
-                            </svg>
-                            <span>Disconnect</span>
-                        </button>
+                    <div class="connection-status">
+                        <div class="status-indicator disconnected" id="statusIndicator"></div>
+                        <span id="statusText">Disconnected</span>
                     </div>
                 </div>
             </div>
@@ -71,7 +68,7 @@
 
                 <!-- Enhanced Features Grid -->
                 <div class="features-grid">
-                    <div class="feature-card ai-chat-link" id="aiChatFeature" title="Click to access AI Chat Interface">
+                    <div class="feature-card">
                         <div class="feature-icon">
                             <svg width="28" height="28" fill="currentColor" viewBox="0 0 24 24">
                                 <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
@@ -79,11 +76,6 @@
                         </div>
                         <h3>AI-Powered Natural Language</h3>
                         <p>Transform complex M365 administration into simple conversations. Ask questions in plain English and watch your environment respond intelligently.</p>
-                        <div class="feature-link-indicator">
-                            <svg width="16" height="16" fill="currentColor" viewBox="0 0 24 24">
-                                <path d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"/>
-                            </svg>
-                        </div>
                     </div>
                     
                     <div class="feature-card">
