Add Zero Trust Assessment tool and remove Enterprise Security card
- Added new Zero Trust Assessment feature card with hyperlink to https://aka.ms/ztworkshop-new
- Applied matching green color scheme and styling consistent with AI-Powered Natural Language card
- Removed Enterprise Security card from landing page for cleaner interface
- Updated both index.html and index_new.html files for consistency
- Added CSS styling for .zero-trust-link class with hover effects and external link indicators
- Streamlined features grid from 4 cards to 3 cards for better responsive layout
- Maintained professional glassmorphism design and animation effects

--- a/public/index_new.html
+++ b/public/index_new.html
@@ -87,16 +87,21 @@
                         <h3>Intelligent Health Reports</h3>
                         <p>Generate comprehensive, actionable health reports with predictive insights and customizable branding for your customers.</p>
                     </div>
-                    
-                    <div class="feature-card">
+
+                    <a href="https://aka.ms/ztworkshop-new" target="_blank" class="feature-card zero-trust-link" title="Access Zero Trust Assessment Tool">
                         <div class="feature-icon">
                             <svg width="28" height="28" fill="currentColor" viewBox="0 0 24 24">
-                                <path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4z"/>
+                                <path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-1 6h2v2h-2V7zm0 4h2v6h-2v-6z"/>
                             </svg>
                         </div>
-                        <h3>Enterprise Security</h3>
-                        <p>Bank-level security with zero-trust authentication, encrypted communications, and compliance with international standards.</p>
-                    </div>
+                        <h3>Zero Trust Assessment</h3>
+                        <p>Evaluate your organization's security posture with Microsoft's comprehensive Zero Trust assessment and implementation guidance.</p>
+                        <div class="feature-link-indicator">
+                            <svg width="16" height="16" fill="currentColor" viewBox="0 0 24 24">
+                                <path d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"/>
+                            </svg>
+                        </div>
+                    </a>
                 </div>
 
                 <!-- Enhanced Tenant Setup -->
