--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>ICB Agent - Microsoft 365 Management Platform</title>
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🔧</text></svg>">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css?v=1722191000">
     <meta name="description" content="Professional Microsoft 365 tenant management and automation platform for IT professionals">
     <meta name="theme-color" content="#022541">
 </head>
@@ -255,6 +255,6 @@
 
     <!-- Scripts -->
     <script src="/socket.io/socket.io.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/app.js?v=1722191000"></script>
 </body>
 </html>
