feat: implement Tenant Clone frontend interface
- Added tenant-clone.html with dual-tenant connection setup
- Created comprehensive tenant-clone.css with modern glassmorphism design
- Implemented tenant-clone.js with full Socket.IO integration
- Added dual-pane policy migration interface with drag-and-drop styling
- Integrated authentication progress tracking and real-time status updates
- Created policy clone modal with customization options
- Added migration progress tracking and comprehensive logging
- Integrated new Tenant Clone feature card into main dashboard
- Responsive design with mobile-first approach
- Real-time Socket.IO communication for all tenant operations

--- a/public/index.html
+++ b/public/index.html
@@ -96,6 +96,21 @@
                         <p>Generate comprehensive, actionable health reports with predictive insights and customizable branding for your customers.</p>
                     </div>
 
+                    <a href="/tenant-clone.html" class="feature-card tenant-clone-link" title="Access Tenant Clone Tool">
+                        <div class="feature-icon">
+                            <svg width="28" height="28" fill="currentColor" viewBox="0 0 24 24">
+                                <path d="M16 1H4C2.9 1 2 1.9 2 3v14h2V3h12V1zm-1 4H7c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H7V7h8v14z"/>
+                            </svg>
+                        </div>
+                        <h3>🔄 Tenant Clone (NEW)</h3>
+                        <p>Clone Microsoft 365 Intune policies between tenants with drag-and-drop simplicity. Perfect for multi-tenant environments and policy standardization.</p>
+                        <div class="feature-link-indicator">
+                            <svg width="16" height="16" fill="currentColor" viewBox="0 0 24 24">
+                                <path d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"/>
+                            </svg>
+                        </div>
+                    </a>
+
                     <a href="https://aka.ms/ztworkshop-new" target="_blank" class="feature-card zero-trust-link" title="Access Zero Trust Assessment Tool">
                         <div class="feature-icon">
                             <svg width="28" height="28" fill="currentColor" viewBox="0 0 24 24">
