fix: resolve load policies button DOM element error
- Updated HTML structure for loadPoliciesBtn and bulkMigrateBtn to include .btn-text and .btn-loader elements
- Added error handling to setButtonLoading method to prevent null element access
- Fixed JavaScript TypeError when clicking Load Source Policies button
- Enhanced button loading state management with proper fallback handling

--- a/public/tenant-clone.html
+++ b/public/tenant-clone.html
@@ -218,17 +218,33 @@
                 
                 <div class="migration-controls">
                     <button class="load-policies-btn" id="loadPoliciesBtn">
-                        <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
-                            <path d="M19 7h-8l-2-2H5c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V9c0-1.1-.9-2-2-2z"/>
-                        </svg>
-                        <span>Load Source Policies</span>
+                        <span class="btn-text">
+                            <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
+                                <path d="M19 7h-8l-2-2H5c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V9c0-1.1-.9-2-2-2z"/>
+                            </svg>
+                            <span>Load Source Policies</span>
+                        </span>
+                        <span class="btn-loader" style="display: none;">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2" opacity="0.3"/>
+                                <path d="M12 2a10 10 0 0 1 10 10" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                            </svg>
+                        </span>
                     </button>
                     
                     <button class="bulk-migrate-btn" id="bulkMigrateBtn" style="display: none;">
-                        <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
-                            <path d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"/>
-                        </svg>
-                        <span>Migrate Selected</span>
+                        <span class="btn-text">
+                            <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
+                                <path d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"/>
+                            </svg>
+                            <span>Migrate Selected</span>
+                        </span>
+                        <span class="btn-loader" style="display: none;">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2" opacity="0.3"/>
+                                <path d="M12 2a10 10 0 0 1 10 10" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                            </svg>
+                        </span>
                     </button>
                 </div>
             </div>
