enhance: improve domain validation for tenant clone interface
- Updated domain validation to accept any verified domains (not just onmicrosoft.com)
- Enhanced regex pattern to support standard domains, subdomains, and onmicrosoft.com
- Updated placeholder text to show examples of acceptable domain formats
- Added comprehensive validation checks for domain format and length
- Improved user guidance with clearer helper text

--- a/public/tenant-clone-new.html
+++ b/public/tenant-clone-new.html
@@ -60,8 +60,8 @@
                             <i class="fas fa-building"></i>
                             Source Tenant Domain
                         </label>
-                        <input type="text" id="sourceInput" placeholder="source-tenant.onmicrosoft.com" />
-                        <small>The tenant you want to copy policies from</small>
+                        <input type="text" id="sourceInput" placeholder="contoso.com or tenant.onmicrosoft.com" />
+                        <small>Any verified domain for the source tenant</small>
                     </div>
                     
                     <div class="connection-arrow">
@@ -73,8 +73,8 @@
                             <i class="fas fa-building"></i>
                             Target Tenant Domain
                         </label>
-                        <input type="text" id="targetInput" placeholder="target-tenant.onmicrosoft.com" />
-                        <small>The tenant you want to copy policies to</small>
+                        <input type="text" id="targetInput" placeholder="fabrikam.com or tenant.onmicrosoft.com" />
+                        <small>Any verified domain for the target tenant</small>
                     </div>
                 </div>
                 
