fix: resolve Content Security Policy violations for tenant clone interface
- Removed all inline onclick event handlers from HTML and JavaScript
- Replaced inline handlers with proper event delegation system
- Added data attributes for policy and error IDs instead of inline functions
- Implemented setupEventDelegation() method for dynamically created elements
- Fixed empty state load button to use proper event listener
- Removed global dashboard variable exposure for security
- Enhanced code maintainability and CSP compliance

Fixes:
- JSON policy configuration now viewable without CSP errors
- Policy migration functionality restored
- All interactive elements working with proper event handling

--- a/public/tenant-clone-new.html
+++ b/public/tenant-clone-new.html
@@ -178,7 +178,7 @@
                 <div class="empty-description">
                     Connect to your tenants and load policies to begin migration
                 </div>
-                <button class="action-btn primary" onclick="document.getElementById('loadPoliciesBtn').click()">
+                <button id="emptyStateLoadBtn" class="action-btn primary">
                     <i class="fas fa-download"></i>
                     <span>Load Policies</span>
                 </button>
