--- a/public/tenant-clone-new.html
+++ b/public/tenant-clone-new.html
@@ -260,6 +260,10 @@
                     <i class="fas fa-undo"></i>
                     Reset
                 </button>
+                <button id="cleanSecretsBtn" class="tool-btn warning" title="Remove secret references from policy JSON">
+                    <i class="fas fa-shield-alt"></i>
+                    Clean Secrets
+                </button>
             </div>
         </div>
         
