fix: resolve JavaScript error and add missing Verify Clean button
- Fixed 'Cannot read properties of undefined (reading 'push')' error in server.js
- Updated verifyNoSecretsRemain method calls to properly initialize arrays before passing
- Added missing 'Verify Clean' button to JSON editor in tenant-clone-new.html
- Both originalSecrets and transformedSecrets arrays now properly initialized
- Enhanced policy migration error handling with correct method signatures

--- a/public/tenant-clone-new.html
+++ b/public/tenant-clone-new.html
@@ -264,6 +264,10 @@
                     <i class="fas fa-shield-alt"></i>
                     Clean Secrets
                 </button>
+                <button id="verifyCleanBtn" class="tool-btn" title="Verify no secret references remain in policy JSON">
+                    <i class="fas fa-search"></i>
+                    Verify Clean
+                </button>
             </div>
         </div>
         
