--- a/public/index.html
+++ b/public/index.html
@@ -96,13 +96,13 @@
                         <p>Generate comprehensive, actionable health reports with predictive insights and customizable branding for your customers.</p>
                     </div>
 
-                    <a href="/tenant-clone-new" class="feature-card tenant-clone-link" title="Access New Policy Migration Dashboard">
+                    <a href="/tenant-clone-new" class="feature-card tenant-clone-link" title="Access Tenant Clone Dashboard">
                         <div class="feature-icon">
                             <svg width="28" height="28" fill="currentColor" viewBox="0 0 24 24">
                                 <path d="M16 1H4C2.9 1 2 1.9 2 3v14h2V3h12V1zm-1 4H7c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H7V7h8v14z"/>
                             </svg>
                         </div>
-                        <h3>🔄 Policy Migration Dashboard (NEW)</h3>
+                        <h3>Tenant Clone</h3>
                         <p>Advanced policy migration between Microsoft 365 tenants with JSON editing, smart selection, and real-time status tracking. Professional IT workflow optimized.</p>
                         <div class="feature-link-indicator">
                             <svg width="16" height="16" fill="currentColor" viewBox="0 0 24 24">
