--- a/public/zero-trust-assessment.html
+++ b/public/zero-trust-assessment.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="zero-trust-page">
     <div class="container">
         <!-- Header with navigation back to landing page -->
         <header class="header">
@@ -26,9 +26,11 @@
                         <div class="status-indicator"></div>
                         <span id="statusText" class="status-text">Checking connection...</span>
                     </div>
-                    <button id="backToLandingBtn" class="btn-secondary back-button">
-                        <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z'/%3E%3C/svg%3E" alt="Back">
-                        <span>Back to Landing Page</span>
+                    <button id="backToLandingBtn" class="home-btn home-button">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
+                        </svg>
+                        <span>Home</span>
                     </button>
                     <button id="disconnectBtn" class="btn-danger disconnect-button" style="display: none;">
                         <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' viewBox='0 0 16 16'%3E%3Cpath d='M6 1a1 1 0 0 0-1 1v1H3.5A1.5 1.5 0 0 0 2 4.5v7A1.5 1.5 0 0 0 3.5 13h9a1.5 1.5 0 0 0 1.5-1.5v-7A1.5 1.5 0 0 0 12.5 3H11V2a1 1 0 0 0-1-1H6z'/%3E%3C/svg%3E" alt="Disconnect">
