--- a/public/index.html
+++ b/public/index.html
@@ -388,10 +388,14 @@
 
     <!-- Scripts -->
     <script src="/socket.io/socket.io.js"></script>
+    <!-- MSAL Library for Microsoft Graph Authentication -->
+    <script src="https://alcdn.msauth.net/browser/2.38.3/js/msal-browser.min.js"></script>
     <!-- Zero Trust Assessment Scripts -->
     <script src="js/zero-trust-graph-service.js?v=1753867551"></script>
     <script src="js/zero-trust-assessment-engine.js?v=1753867551"></script>
     <script src="js/zero-trust-assessment.js?v=1753867551"></script>
+    <!-- Monthly Report Authentication Service -->
+    <script src="js/monthly-report-auth.js?v=1753867551"></script>
     <script src="js/app.js?v=1753867551"></script>
 </body>
 </html>
