feat: complete real Microsoft Graph API data collection integration
- Enhanced monthly-report-graph-service.js with comprehensive data collection modules
- Updated app.js to use real Graph API calls instead of simulation
- Added dynamic report preview generation based on collected data
- Implemented progress tracking and error handling for real data collection
- Added styling for priority-based recommendations and data summary sections
- Integrated executive summary metrics from actual Microsoft 365 data
- Added automatic preview refresh when data collection completes
- Enhanced error recovery options with retry and fallback mechanisms

Data Collection Features:
- Identity & User Management data collection
- Device Management & Intune data retrieval
- Security Center & Threat Protection metrics
- Compliance & Policy status reporting
- Application & Licensing insights
- Data Protection & Classification status
- AI-generated recommendations based on real data
- Professional PDF-ready report structure

Technical Implementation:
- Real Microsoft Graph API integration with 30+ permission scopes
- Comprehensive error handling and rate limiting
- Progress callback system for user feedback
- Dynamic UI updates based on collection results
- Fallback to sample data if collection fails
- Production-ready authentication flow

--- a/public/index.html
+++ b/public/index.html
@@ -394,8 +394,9 @@
     <script src="js/zero-trust-graph-service.js?v=1753867551"></script>
     <script src="js/zero-trust-assessment-engine.js?v=1753867551"></script>
     <script src="js/zero-trust-assessment.js?v=1753867551"></script>
-    <!-- Monthly Report Authentication Service -->
+    <!-- Monthly Report Services -->
     <script src="js/monthly-report-auth.js?v=1753867551"></script>
+    <script src="js/monthly-report-graph-service.js?v=1753867551"></script>
     <script src="js/app.js?v=1753867551"></script>
 </body>
 </html>
