--- a/public/index.html
+++ b/public/index.html
@@ -390,6 +390,8 @@
     <script src="/socket.io/socket.io.js"></script>
     <!-- MSAL Library for Microsoft Graph Authentication -->
     <script src="https://alcdn.msauth.net/browser/2.38.3/js/msal-browser.min.js"></script>
+    <!-- ICB Auth Service -->
+    <script src="js/auth-service.js?v=1753867551"></script>
     <!-- Zero Trust Assessment Scripts -->
     <script src="js/zero-trust-graph-service.js?v=1753867551"></script>
     <script src="js/zero-trust-assessment-engine.js?v=1753867551"></script>
